feat: implement upload/download images
